@@ -2,20 +2,12 @@ package com.liu.search.Service.Impl;
 
 import cn.hutool.core.bean.BeanUtil;
 import co.elastic.clients.elasticsearch._types.aggregations.*;
-import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
-import co.elastic.clients.elasticsearch._types.query_dsl.MultiMatchQuery;
-import co.elastic.clients.elasticsearch._types.query_dsl.Query;
-import co.elastic.clients.elasticsearch._types.query_dsl.TermQuery;
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import co.elastic.clients.elasticsearch._types.query_dsl.*;
+import com.liu.common.untils.UserContext;
 import com.liu.search.Service.IDocumentSearchService;
-import com.liu.search.config.DocumentToEsConverter;
-import com.liu.search.config.EsDocumentRepository;
 import com.liu.search.domain.DTO.DocSearchDTO;
 import com.liu.search.domain.DTO.GlobalSearchDTO;
-import com.liu.search.domain.DTO.SingleSearchDTO;
-import com.liu.file.domain.Entity.Document;
 import com.liu.search.domain.Entity.EsDocument;
-import com.liu.file.domain.Entity.Knowledge;
 import com.liu.search.domain.VO.EsDocumentSearchVO;
 import com.liu.search.domain.VO.EsDocumentVO;
 import com.liu.search.domain.VO.GlobalSearchResultVO;
@@ -25,6 +17,7 @@ import com.liu.common.common.page.PageRequestDTO;
 import com.liu.common.common.page.PageResultVO;
 import com.liu.search.feign.KnowledgeFeignClient;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.elasticsearch.client.elc.ElasticsearchAggregation;
 import org.springframework.data.elasticsearch.client.elc.ElasticsearchTemplate;
 import org.springframework.data.elasticsearch.client.elc.NativeQuery;
 import org.springframework.data.elasticsearch.core.AggregationsContainer;
@@ -33,6 +26,8 @@ import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.data.elasticsearch.core.query.HighlightQuery;
 import org.springframework.data.elasticsearch.core.query.highlight.*;
 import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
+
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -41,51 +36,49 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class DocumentSearchService implements IDocumentSearchService {
 
-    private final EsDocumentRepository esDocumentRepository;
-
-    private final DocumentToEsConverter documentToEsConverter;
-
     private final ElasticsearchTemplate elasticsearchTemplate;
 
     private final KnowledgeFeignClient knowledgeFeignClient;
 
 
-
     @Override
-    public void saveDocToEs(Document documentRecord, String content, Integer pageCount) {
-        documentRecord.setContentText(content);
-        documentRecord.setPageCount(pageCount);
-        EsDocument esDocument = documentToEsConverter.convertDocumentToEsDocument(documentRecord);
-        esDocumentRepository.save(esDocument);
-    }
-
-
-
-    @Override
-    public Result<PageResultVO<GlobalSearchResultVO>> search(GlobalSearchDTO dto, PageRequestDTO page) {
+    public Result<PageResultVO<GlobalSearchResultVO>> search(GlobalSearchDTO dto) {
         String keyWord = dto.getKeyWord();
-        String filter = dto.getFilter();
-
         TermsAggregation terms = TermsAggregation.of(t -> t.field("knowledgeId").size(100));
         Aggregation aggregation = terms._toAggregation();
 
         NativeQuery resultQuery = NativeQuery.builder()
-                .withQuery(BoolQuery.of(b->b.must(MultiMatchQuery.of(m->m.query(keyWord).fields("content","title"))._toQuery())
-                        .must(TermQuery.of(t->t.field("filter").value(filter))._toQuery()))._toQuery())
+                .withQuery(BoolQuery.of(b -> b
+                        .must(MultiMatchQuery.of(m -> m.query(keyWord).fields("content", "title"))._toQuery())
+                        .filter(TermQuery.of(t -> t
+                                .field("author")
+                                .value(UserContext.getUserId())
+                        )._toQuery())
+                )._toQuery())
                 .withAggregation("group_by_kbId", aggregation)
+                .withMaxResults(0)
                 .build();
 
         SearchHits<EsDocument> searchHits = elasticsearchTemplate.search(resultQuery, EsDocument.class);
 
+
         AggregationsContainer<?> aggregations = searchHits.getAggregations();
-        Map<String, Aggregate> aggregationMap = (Map<String, Aggregate>) aggregations.aggregations();
-        Aggregate aggregate = aggregationMap.get("group_by_kbId");
-        if (aggregate == null) {
+        if (aggregations == null) {
             return Result.success(new PageResultVO<>());
         }
-        if (!aggregate.isLterms()) {
+
+        List<ElasticsearchAggregation> aggregateList = (List<ElasticsearchAggregation>) aggregations.aggregations();
+
+        if (CollectionUtils.isEmpty(aggregateList)) {
             return Result.success(new PageResultVO<>());
         }
+
+        ElasticsearchAggregation esAgg = aggregateList.get(0);
+        Aggregate aggregate = esAgg.aggregation().getAggregate();
+        if (aggregate == null || !aggregate.isLterms()) {
+            return Result.success(new PageResultVO<>());
+        }
+
         LongTermsAggregate lterms = aggregate.lterms();
         List<LongTermsBucket> array = lterms.buckets().array();
         List<GlobalSearchResultVO> voList = array.stream().map(b -> {
@@ -102,23 +95,21 @@ public class DocumentSearchService implements IDocumentSearchService {
         if (kdIdList.isEmpty()) {
             return Result.success(new PageResultVO<>());
         }
-        //TODO:对于这个查询知识库的基本信息,将来优化为缓存实现
-        List<Knowledge> knowledgeList = knowledgeFeignClient.list(new LambdaQueryWrapper<Knowledge>().in(Knowledge::getId, kdIdList));
+        List<KnowledgeVO> knowledgeList = knowledgeFeignClient.list(kdIdList);
         Map<Long, KnowledgeVO> collect = knowledgeList.stream()
                 .collect(Collectors.toMap(
-                        Knowledge::getId,
-                        knowledge -> BeanUtil.copyProperties(knowledge, KnowledgeVO.class),
-                        (existing, replacement) -> existing
+                        KnowledgeVO::getId,
+                        knowledgeVO -> knowledgeVO
                 ));
 
-        List<GlobalSearchResultVO> list = combineCountAndInf(collect,voList);
+        List<GlobalSearchResultVO> list = combineCountAndInf(collect, voList);
 
-        return manualPagination(list, page);
+        return manualPagination(list, dto.getPage());
 
     }
 
     @Override
-    public Result<PageResultVO<EsDocumentSearchVO>> docSearch(DocSearchDTO dto, PageRequestDTO page) {
+    public Result<PageResultVO<EsDocumentSearchVO>> docSearch(DocSearchDTO dto) {
         Long knowledgeId = dto.getKnowledgeId();
         String keyWord = dto.getKeyWord();
 
@@ -135,13 +126,16 @@ public class DocumentSearchService implements IDocumentSearchService {
         HighlightFieldParameters content = HighlightFieldParameters.builder().build();
         List<HighlightField> list = Arrays.asList(new HighlightField("title", title),
                 new HighlightField("content", content));
-        Highlight highlight = new Highlight(highlightParameters,list);
-        HighlightQuery highlightQuery = new HighlightQuery(highlight,EsDocument.class);
+        Highlight highlight = new Highlight(highlightParameters, list);
+        HighlightQuery highlightQuery = new HighlightQuery(highlight, EsDocument.class);
 
         NativeQuery result = NativeQuery.builder()
-                .withQuery(BoolQuery.of(b->b.must(MultiMatchQuery.of(m->m.query(keyWord).fields("content","title"))._toQuery())
-                        .must(TermQuery.of(t->t.field("knowledgeId").value(knowledgeId))._toQuery()))._toQuery())
-                .withPageable(page.convertToPageable())
+                .withQuery(BoolQuery.of(b -> b
+                        .must(MultiMatchQuery.of(m -> m.query(keyWord).fields("content", "title"))._toQuery())
+                        .filter(TermQuery.of(t -> t.field("knowledgeId").value(knowledgeId))._toQuery())
+                        .filter(TermQuery.of(t -> t.field("author").value(UserContext.getUserId()))._toQuery()))
+                        ._toQuery())
+                .withPageable(dto.getPage().convertToPageable())
                 .withHighlightQuery(highlightQuery)
                 .build();
 
@@ -153,48 +147,51 @@ public class DocumentSearchService implements IDocumentSearchService {
             EsDocumentSearchVO eds = new EsDocumentSearchVO();
 
             EsDocument es = hit.getContent();
-            BeanUtil.copyProperties(es,eds.getEsDocumentVO());
-
+            EsDocumentVO esDocumentVO = BeanUtil.copyProperties(es, EsDocumentVO.class);
+            eds.setEsDocumentVO(esDocumentVO);
             eds.setScore(hit.getScore());
 
             Map<String, List<String>> highlightFields = hit.getHighlightFields();
             eds.setHighlightTitle(highlightFields.get("title"));
             eds.setHighlightContent(highlightFields.get("content"));
+            searchList.add(eds);
         }
-        PageResultVO<EsDocumentSearchVO> lastResult = PageResultVO.success(searchList, searchHits.getTotalHits(), page);
+        PageResultVO<EsDocumentSearchVO> lastResult = PageResultVO.success(searchList, searchHits.getTotalHits(), dto.getPage());
 
         return Result.success(lastResult);
     }
 
-    @Override
+    /*@Override
     public Result<EsDocumentSearchVO> singleSearch(SingleSearchDTO dto) {
         Long documentId = dto.getDocumentId();
         String keyWord = dto.getKeyWord();
-        Query query = BoolQuery.of(b -> b.must(TermQuery.of(t -> t.field("documentId").value(documentId))._toQuery())
-                .must(MultiMatchQuery.of(m -> m.fields("content", "title").query(keyWord))._toQuery()))._toQuery();
         HighlightParameters highlightParameters = HighlightParameters.builder()
                 .withFragmentSize(150)
-                .withNumberOfFragments(0)
+                .withNumberOfFragments(1)
                 .build();
         HighlightFieldParameters title = HighlightFieldParameters.builder()
                 .withFragmentSize(20)
                 .withNumberOfFragments(1)
                 .build();
-        List<HighlightField> list = Arrays.asList(new HighlightField("title",title));
-        Highlight highlight = new Highlight(highlightParameters,list);
-        HighlightQuery highlightQuery = new HighlightQuery(highlight,EsDocument.class);
-        NativeQuery lastQuery = NativeQuery.builder()
-                .withQuery(query)
+        HighlightFieldParameters content = HighlightFieldParameters.builder().build();
+        List<HighlightField> list = Arrays.asList(new HighlightField("title", title), new HighlightField("content", content));
+        Highlight highlight = new Highlight(highlightParameters, list);
+        HighlightQuery highlightQuery = new HighlightQuery(highlight, EsDocument.class);
+        NativeQuery nativeQuery = NativeQuery.builder()
+                .withQuery(BoolQuery.of(b -> b
+                        .must(MultiMatchQuery.of(m -> m.fields("content", "title").query(keyWord))._toQuery())
+                        .filter(TermQuery.of(t -> t.field("documentId").value(documentId))._toQuery()))._toQuery()
+                )
                 .withHighlightQuery(highlightQuery)
                 .build();
-        SearchHits<EsDocument> searchResult = elasticsearchTemplate.search(lastQuery, EsDocument.class);
+        SearchHits<EsDocument> searchResult = elasticsearchTemplate.search(nativeQuery, EsDocument.class);
         List<SearchHit<EsDocument>> searchHits = searchResult.getSearchHits();
-        if (searchHits == null || searchHits.isEmpty()) {
+        if (searchHits.isEmpty()) {
             return Result.success();
         }
 
         EsDocumentSearchVO result = new EsDocumentSearchVO();
-        SearchHit<EsDocument> esDocumentSearchHit = searchHits.get(0);
+        SearchHit<EsDocument> esDocumentSearchHit = searchHits.getFirst();
         EsDocument esDocument = esDocumentSearchHit.getContent();
         EsDocumentVO esDocumentVO = BeanUtil.copyProperties(esDocument, EsDocumentVO.class);
         result.setEsDocumentVO(esDocumentVO);
@@ -206,31 +203,32 @@ public class DocumentSearchService implements IDocumentSearchService {
         result.setHighlightContent(highlightFields.get("content"));
 
         return Result.success(result);
-    }
-
+    }*/
 
 
     private Result<PageResultVO<GlobalSearchResultVO>> manualPagination(List<GlobalSearchResultVO> voList, PageRequestDTO page) {
-        int pageNum = page.getPageNum(); // 假设从0开始
+        int pageNum = page.getPageNum() - 1; // 关键！！！前端页码从1开始，你必须-1！！！
         int pageSize = page.getPageSize();
         int totalItems = voList.size();
 
-        // 计算分页起始索引
         int startIndex = pageNum * pageSize;
-        if (startIndex >= totalItems) {
-            // 请求的页码超出范围，返回空页
-            return Result.success(PageResultVO.empty(page));
-        }
-        int endIndex = Math.min(startIndex + pageSize, totalItems);
 
-        // 截取当前页的子列表 (注意：subList返回的是视图，若需独立列表可new ArrayList包裹)
+        // 修复：不调用 empty()，自己构造空页
+        if (startIndex >= totalItems) {
+            PageResultVO<GlobalSearchResultVO> emptyPage = new PageResultVO<>();
+            emptyPage.setList(new ArrayList<>());
+            emptyPage.setTotal(0L);
+            return Result.success(emptyPage);
+        }
+
+        int endIndex = Math.min(startIndex + pageSize, totalItems);
         List<GlobalSearchResultVO> pagedList = voList.subList(startIndex, endIndex);
-        // 构建分页结果VO
+
         PageResultVO<GlobalSearchResultVO> pageResult = PageResultVO.success(pagedList, (long) totalItems, page);
         return Result.success(pageResult);
     }
 
-    private List<GlobalSearchResultVO> combineCountAndInf(Map<Long,KnowledgeVO> map, List<GlobalSearchResultVO> voList) {
+    private List<GlobalSearchResultVO> combineCountAndInf(Map<Long, KnowledgeVO> map, List<GlobalSearchResultVO> voList) {
         for (GlobalSearchResultVO vo : voList) {
             Long id = vo.getKnowledgeVO().getId();
             KnowledgeVO knowledge = map.get(id);
